--- a/compose_dev.yml
+++ b/compose_dev.yml
@@ -1,5 +1,5 @@
 services:
-  experimentone_api:
+  experitone_api:
     image: mcr.microsoft.com/dotnet/sdk:9.0
     container_name: experitone_api
     ports:
@@ -11,6 +11,9 @@ services:
       - ./experitone-api/experitone-api:/src
     working_dir: /src
     command: dotnet watch run --urls=http://+:2570
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:9.1.2
@@ -22,19 +25,28 @@ services:
     ports:
       - "9200:9200"
     volumes:
-      - ./es_data:/usr/share/elasticsearch/data
+      - esdata:/usr/share/elasticsearch/data
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          'curl -s http://localhost:9200/_cluster/health | grep -q ''"status":"green"''',
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 12
+      start_period: 10s
 
   kibana:
     image: docker.elastic.co/kibana/kibana:9.1.2
     container_name: kibana
     environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     ports:
       - "5601:5601"
     depends_on:
-      - elasticsearch
+      elasticsearch:
+        condition: service_healthy
+
 volumes:
-  es_data:
-    driver: local
+  esdata:
