--- a/compose_dev.yml
+++ b/compose_dev.yml
@@ -30,11 +30,11 @@ services:
       test:
         [
           "CMD-SHELL",
-          'curl -s http://localhost:9200/_cluster/health | grep -q ''"status":"green"''',
+          'curl -s http://localhost:9200/_cluster/health | grep -q ''"status":"yellow"''',
         ]
       interval: 10s
       timeout: 5s
-      retries: 12
+      retries: 20
       start_period: 10s
 
   kibana:
