--- a/compose_dev.yml
+++ b/compose_dev.yml
@@ -30,7 +30,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          'curl -s http://localhost:9200/_cluster/health | grep -q ''"status":"yellow"''',
+          'curl -s http://localhost:9200/_cluster/health | grep -Eq ''"status":"(yellow|green)"''',
         ]
       interval: 10s
       timeout: 5s
